Refactors & Safety Fixes
Multiple refactors and safety fixes across the project:

- Bumped ASP API dependency to 4.2.0-SNAPSHOT in game/build.gradle.
- Added extensive null-safety checks in many listeners (ability, interact, area, map settings, join/quit) to avoid NPEs.
- Improved level update logic: avoid unnecessary async tasks, guard max level, and prevent division-by-zero when computing XP progress.
- MapSettingsListener: simplified player interaction logic, consolidated chest/flint&steel checks, commented out legacy instant-void kill flow and replaced with a dedicated void-damage handler.
- PlayerDeathListener: made death handling more robust (check online/respawn state, only schedule UI if still online, team null checks) and adjusted placement/team elimination flows.
- GameInstance/GameService: removed strict duplicate-module exception, fixed minPlayers logic, refactored cross-server routing to use CompletableFuture helpers for safer async handling and clearer control flow.