@@ -4,11 +4,10 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.JsonObject;
 
-import cz.johnslovakia.gameapi.Shared;
+import cz.johnslovakia.gameapi.Core;
 import cz.johnslovakia.gameapi.database.JSConfigs;
 import cz.johnslovakia.gameapi.database.PlayerTable;
 import cz.johnslovakia.gameapi.events.DailyXPGainEvent;
-import cz.johnslovakia.gameapi.modules.dailyRewardTrack.DailyRewardTrackModule;
 import cz.johnslovakia.gameapi.modules.messages.MessageModule;
 import cz.johnslovakia.gameapi.modules.Module;
 import cz.johnslovakia.gameapi.modules.ModuleManager;
@@ -17,37 +16,24 @@ import cz.johnslovakia.gameapi.rewards.Reward;
 import cz.johnslovakia.gameapi.rewards.RewardItem;
 import cz.johnslovakia.gameapi.rewards.unclaimed.UnclaimedRewardType;
 import cz.johnslovakia.gameapi.users.PlayerIdentity;
-import cz.johnslovakia.gameapi.utils.CharRepo;
 import cz.johnslovakia.gameapi.utils.Logger;
-import cz.johnslovakia.gameapi.utils.StringUtils;
-import cz.johnslovakia.gameapi.utils.TextBackground;
-import cz.johnslovakia.gameapi.utils.chatHead.ChatHeadAPI;
-import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import me.zort.sqllib.SQLDatabaseConnection;
 import me.zort.sqllib.api.data.Row;
-import net.kyori.adventure.key.Key;
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.ComponentBuilder;
+import net.kyori.adventure.text.TextComponent;
 import net.kyori.adventure.text.format.NamedTextColor;
-import net.kyori.adventure.text.format.ShadowColor;
 import net.kyori.adventure.text.format.TextColor;
-import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
-import net.md_5.bungee.api.ChatMessageType;
-import net.md_5.bungee.api.chat.TextComponent;
 import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
-import org.bukkit.Color;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.entity.Player;
-import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
-import org.bukkit.event.player.PlayerQuitEvent;
 import org.bukkit.scheduler.BukkitRunnable;
 
 import java.sql.Connection;
 import java.sql.PreparedStatement;
-import java.time.LocalDate;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
@@ -95,9 +81,9 @@ public class LevelModule implements Module, Listener {
         }
 
         CompletableFuture<Optional<Row>> rowFuture = CompletableFuture.supplyAsync(() -> {
-            if (Shared.getInstance().getDatabase() == null) return Optional.empty();
+            if (Core.getInstance().getDatabase() == null) return Optional.empty();
 
-            try (SQLDatabaseConnection connection = Shared.getInstance().getDatabase().getConnection()) {
+            try (SQLDatabaseConnection connection = Core.getInstance().getDatabase().getConnection()) {
                 if (connection == null) return Optional.empty();
 
                 return connection.select()
@@ -127,8 +113,7 @@ public class LevelModule implements Module, Listener {
                 float xpProgress = data.getXpToNextLevel() > 0
                         ? (float) data.getXpOnCurrentLevel() / data.getXpToNextLevel()
                         : 1.0f;
-                // setExp/setLevel musí na hlavním vlákně
-                Bukkit.getScheduler().runTask(Shared.getInstance().getPlugin(), () -> {
+                Bukkit.getScheduler().runTask(Core.getInstance().getPlugin(), () -> {
                     player.setExp(Math.min(xpProgress, 1.0f));
                     player.setLevel(level);
                 });
@@ -165,16 +150,7 @@ public class LevelModule implements Module, Listener {
         PlayerLevelData data = getPlayerData(offlinePlayer);
         if (data == null) return Component.text("§c0");
 
-        if (data.getLevel() >= 100) {
-            return Component.text()
-                    .append(Component.text("1", TextColor.fromHexString("#5fb243")))
-                    .append(Component.text("0", TextColor.fromHexString("#d86dd8")))
-                    .append(Component.text("0", TextColor.fromHexString("#e14d45")))
-                    .build();
-        }
-
-        return Component.text(data.getLevel())
-                .color(data.getLevelEvolution().color());
+        return getLevelColored(data.getLevel());
     }
 
     public Component getLevelColored(int level) {
@@ -190,62 +166,17 @@ public class LevelModule implements Module, Listener {
                 .color(getLevelEvolution(level).color());
     }
 
-    public LevelRange getPlayerLevelRange(OfflinePlayer offlinePlayer) {
-        return getPlayerData(offlinePlayer).getLevelRange();
-    }
-
-    public LevelRange getPlayerNextLevelRange(OfflinePlayer offlinePlayer) {
-        return getLevelRange(getPlayerData(offlinePlayer).getLevel() + 1);
-    }
-
-    public void addDailyXP(OfflinePlayer offlinePlayer, int amount) {
-        PlayerLevelData data = getPlayerData(offlinePlayer);
-
-        int oldXP = data.getDailyXP();
-        int newXP = oldXP + amount;
-        data.setDailyXP(newXP);
-
-        DailyXPGainEvent event = new DailyXPGainEvent(offlinePlayer, oldXP, newXP, amount);
-        Bukkit.getPluginManager().callEvent(event);
-
-        Bukkit.getScheduler().runTaskAsynchronously(Shared.getInstance().getPlugin(), task -> {
-            try (SQLDatabaseConnection dbConn = Shared.getInstance().getDatabase().getConnection()) {
-                if (dbConn == null) return;
-
-                Connection conn = dbConn.getConnection();
-                String sql = "UPDATE " + PlayerTable.TABLE_NAME + " SET DailyXP = ? WHERE Nickname = ?";
-
-                try (PreparedStatement ps = conn.prepareStatement(sql)) {
-                    ps.setInt(1, data.getDailyXP());
-                    ps.setString(2, offlinePlayer.getName());
-                    ps.executeUpdate();
-                }
-            } catch (Exception e) {
-                Bukkit.getLogger().severe("Failed to save DailyXP for " + offlinePlayer.getName());
-                e.printStackTrace();
-            }
-        });
-    }
-
     public LevelRange getLevelRange(int level) {
-        int currentLevel = 1;
-
         for (LevelRange range : levelRanges) {
-            int start = currentLevel;
-            int end = currentLevel + range.getLength() - 1;
-
-            if (level >= start && level <= end) {
+            if (level >= range.startLevel() && level <= range.endLevel()) {
                 return range;
             }
-
-            currentLevel = end + 1;
         }
-
         return null;
     }
 
     public LevelEvolution getLevelEvolution(int level) {
-        LevelEvolution result = levelEvolutions.get(0);
+        LevelEvolution result = levelEvolutions.getFirst();
         for (LevelEvolution evolution : levelEvolutions) {
             if (level >= evolution.startLevel()) {
                 result = evolution;
@@ -267,23 +198,22 @@ public class LevelModule implements Module, Listener {
 
     private int calculateLevelFromXp(int totalXp) {
         int xpSum = 0;
-        int currentLevel = 1;
 
         for (LevelRange range : levelRanges) {
             for (int lvl = range.startLevel(); lvl <= range.endLevel(); lvl++) {
                 int xpNeeded = range.getXPForLevel(lvl);
 
                 if (totalXp < xpSum + xpNeeded) {
-                    return currentLevel;
+                    return lvl;
                 }
 
                 xpSum += xpNeeded;
-                currentLevel++;
             }
         }
 
-        return currentLevel;
+        return levelRanges.getLast().endLevel();
     }
+
 
     public Reward getRewardForLevel(int level) {
         LevelReward levelReward = levelRewards.stream()
@@ -304,15 +234,16 @@ public class LevelModule implements Module, Listener {
         PlayerLevelData data = getPlayerData(offlinePlayer);
         if (data == null) return;
         int currentLevel = data.getLevel();
+        int maxLevel = levelRanges.getLast().endLevel();
 
-        if (currentLevel >= levelRanges.getLast().endLevel())
+        if (currentLevel >= maxLevel)
             return;
 
         ModuleManager.getModule(ResourcesModule.class).getPlayerBalance(offlinePlayer, "ExperiencePoints").thenAccept(xp -> {
-            int newLevel = calculateLevelFromXp(xp);
+            int newLevel = Math.min(calculateLevelFromXp(xp), maxLevel);
 
-            if (newLevel > currentLevel) {
-                performLevelUp(offlinePlayer, currentLevel, newLevel);
+            if (newLevel > data.getLevel()) {
+                performLevelUp(offlinePlayer, data.getLevel(), newLevel);
                 data.setLevel(newLevel);
             }
         });
@@ -322,8 +253,7 @@ public class LevelModule implements Module, Listener {
         new BukkitRunnable() {
             @Override
             public void run() {
-                Player player = offlinePlayer instanceof Player p ? p : null;
-                if (player != null) {
+                if (offlinePlayer.isOnline() && offlinePlayer instanceof Player player) {
                     player.playSound(player, "jsplugins:completed", 20.0F, 20.0F);
                     ModuleManager.getModule(MessageModule.class).get(player, "chat.level.levelUp")
                             .replace("%level%", String.valueOf(newLevel))
@@ -342,18 +272,134 @@ public class LevelModule implements Module, Listener {
                     }
                 }
             }
-        }.runTaskLater(Shared.getInstance().getPlugin(), 1L);
+        }.runTaskLater(Core.getInstance().getPlugin(), 1L);
     }
 
-    public void levelUpBanner(Player player, int level) {
-        Component text = Component.text("§f\uE00B ").font(Key.key("jsplugins", "actionbar_offset"))
+    /*public void levelUpBanner(Player player, int level) {
+        Key offsetFont = Key.key("jsplugins", "actionbar_offset");
+
+        Component text = Component.text()
                 .shadowColor(ShadowColor.shadowColor(0))
-                .append(ModuleManager.getModule(MessageModule.class).get(player, "chat.actionbar.level_up").getTranslated())
-                .append(getLevelColored(level))
-                .append(getLevelEvolution(level).getIcon().font(Key.key("jsplugins", "actionbar_offset")))
-                .append(Component.text(" §f\uE00B").font(Key.key("jsplugins", "actionbar_offset")));
+                .append(Component.text("\uE00B ")
+                        .font(offsetFont)
+                        .color(NamedTextColor.WHITE))
+                .append(ModuleManager.getModule(MessageModule.class)
+                        .get(player, "chat.actionbar.level_up")
+                        .getTranslated()
+                        .font(Key.key("minecraft", "default")))
+                .append(getLevelColored(level)
+                        .font(Key.key("minecraft", "default")))
+                .append(getLevelEvolution(level).getIcon())
+                .append(Component.text(" \uE00B")
+                        .font(offsetFont)
+                        .color(NamedTextColor.WHITE))
+                .build();
+
         player.sendActionBar(TextBackground.getTextWithBackground(text));
+    }*/
+
+    public void levelUpBanner(Player player, int level) {
+        LevelEvolution evolution = getLevelEvolution(level);
+        Component icon = evolution.getIcon();
+        String rawText = ModuleManager.getModule(MessageModule.class).get(player, "chat.actionbar.level_up").getRawTranslated();
+        TextColor evolutionColor = evolution.color();
+
+        String cleanText = rawText.replaceAll("§[0-9a-fk-or]", "");
+        String fullText = cleanText + level;
+        TextColor[] charColors = new TextColor[fullText.length()];
+
+        if (level >= 100) {
+            TextColor[] palette = {
+                    TextColor.fromHexString("#5fb243"),
+                    TextColor.fromHexString("#d86dd8"),
+                    TextColor.fromHexString("#e14d45")
+            };
+            for (int i = 0; i < charColors.length; i++) {
+                float pos = (float) i / (charColors.length - 1) * (palette.length - 1);
+                int idx = Math.min((int) pos, palette.length - 2);
+                float t = pos - idx;
+                charColors[i] = lerpColor(palette[idx], palette[idx + 1], t);
+            }
+        } else {
+            Arrays.fill(charColors, evolutionColor);
+        }
+
+        new BukkitRunnable() {
+            int tick = 0;
+            final int WAVE_TICKS = 50;
+            final int HOLD_TICKS = 15;
+            final int TOTAL_TICKS = WAVE_TICKS + 15;
+
+            @Override
+            public void run() {
+                if (!player.isOnline() || tick > TOTAL_TICKS) {
+                    cancel();
+                    return;
+                }
+
+                ComponentBuilder<TextComponent, TextComponent.Builder> builder = Component.text();
+
+                if (tick > WAVE_TICKS) {
+                    for (int i = 0; i < fullText.length(); i++) {
+                        builder.append(Component.text(String.valueOf(fullText.charAt(i))).color(charColors[i]));
+                    }
+                } else {
+                    int wavePos = tick % (fullText.length() + 6);
+
+                    for (int i = 0; i < fullText.length(); i++) {
+                        float distance = Math.abs(wavePos - i);
+                        float blend = Math.max(0f, 1f - (distance / 3f));
+                        TextColor color = lerpColor(NamedTextColor.GRAY, charColors[i], blend);
+                        builder.append(Component.text(String.valueOf(fullText.charAt(i))).color(color));
+                    }
+                }
+
+                builder.append(Component.text(" "));
+                builder.append(icon);
+                player.sendActionBar(builder.build());
+                tick++;
+            }
+        }.runTaskTimer(Core.getInstance().getPlugin(), 0L, 1L);
     }
+
+    private TextColor lerpColor(TextColor from, TextColor to, float t) {
+        t = Math.max(0f, Math.min(1f, t));
+        int r = (int) (from.red() + (to.red() - from.red()) * t);
+        int g = (int) (from.green() + (to.green() - from.green()) * t);
+        int b = (int) (from.blue() + (to.blue() - from.blue()) * t);
+        return TextColor.color(r, g, b);
+    }
+
+    public void addDailyXP(OfflinePlayer offlinePlayer, int amount) {
+        PlayerLevelData data = getPlayerData(offlinePlayer);
+
+        int oldXP = data.getDailyXP();
+        int newXP = oldXP + amount;
+        data.setDailyXP(newXP);
+
+        DailyXPGainEvent event = new DailyXPGainEvent(offlinePlayer, oldXP, newXP, amount);
+        Bukkit.getPluginManager().callEvent(event);
+
+        Bukkit.getScheduler().runTaskAsynchronously(Core.getInstance().getPlugin(), task -> {
+            try (SQLDatabaseConnection dbConn = Core.getInstance().getDatabase().getConnection()) {
+                if (dbConn == null) return;
+
+                Connection conn = dbConn.getConnection();
+                String sql = "UPDATE " + PlayerTable.TABLE_NAME + " SET DailyXP = ? WHERE Nickname = ?";
+
+                try (PreparedStatement ps = conn.prepareStatement(sql)) {
+                    ps.setInt(1, data.getDailyXP());
+                    ps.setString(2, offlinePlayer.getName());
+                    ps.executeUpdate();
+                }
+            } catch (Exception e) {
+                Bukkit.getLogger().severe("Failed to save DailyXP for " + offlinePlayer.getName());
+                e.printStackTrace();
+            }
+        });
+    }
+
+
 
 
     public static Builder builder() {
@@ -373,8 +419,18 @@ public class LevelModule implements Module, Listener {
 
             String json = new JSConfigs().loadConfig("LevelModule");
 
-            if (json != null && json.contains("\"color\"") && json.contains("\"scaling\"")) {
-                return gson.fromJson(json, LevelModule.class);
+            if (json != null && !json.isBlank() && json.contains("\"color\"") && json.contains("\"scaling\"")) {
+                LevelModule loaded = gson.fromJson(json, LevelModule.class);
+
+                if (!loaded.getLevelRanges().isEmpty()
+                        && loaded.getLevelRanges().getFirst().endLevel() == 10) {
+
+                    Logger.log("Old LevelModule range format detected. Migrating to new format...", Logger.LogType.WARNING);
+                    LevelModule newModule = LevelModule.createDefault();
+                    saveLevelModule(newModule);
+                    return newModule;
+                }
+                return loaded;
             } else {
                 Logger.log("Old or missing LevelModule format detected - creating new default config", Logger.LogType.WARNING);
                 LevelModule defaultManager = LevelModule.createDefault();
@@ -412,16 +468,16 @@ public class LevelModule implements Module, Listener {
 
         public static Builder createDefault() {
             return new Builder()
-                    .addLevelRange(0, 10, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 1000)
-                    .addLevelRange(11, 20, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 2000)
-                    .addLevelRange(21, 30, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 3000)
-                    .addLevelRange(31, 40, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 3000)
-                    .addLevelRange(41, 50, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 4000)
-                    .addLevelRange(51, 60, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 4000)
-                    .addLevelRange(61, 70, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 5000)
-                    .addLevelRange(71, 80, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 5000)
-                    .addLevelRange(81, 90, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 7500)
-                    .addLevelRange(91, 100, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 10000)
+                    .addLevelRange(0, 9, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 1000)
+                    .addLevelRange(10, 19, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 2000)
+                    .addLevelRange(20, 29, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 3000)
+                    .addLevelRange(30, 39, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 3000)
+                    .addLevelRange(40, 49, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 4000)
+                    .addLevelRange(50, 59, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 4000)
+                    .addLevelRange(60, 69, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 5000)
+                    .addLevelRange(70, 79, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 5000)
+                    .addLevelRange(80, 89, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 7500)
+                    .addLevelRange(90, 100, 20000, LevelRange.XPScaling.AGGRESSIVE_EXPONENTIAL).withReward("Coins", 10000)
 
                     .addLevelEvolution(0, "\uE000", TextColor.fromHexString("#707070"), 1027, 1028)
                     .addLevelEvolution(10, "\uE001", TextColor.fromHexString("#d0d0d0"), 1029, 1030)
@@ -430,7 +486,7 @@ public class LevelModule implements Module, Listener {
                     .addLevelEvolution(40, "\uE004", TextColor.fromHexString("#3080d0"), 1035, 1036)
                     .addLevelEvolution(50, "\uE005", TextColor.fromHexString("#e06ef4"), 1037, 1038)
                     .addLevelEvolution(60, "\uE006", TextColor.fromHexString("#8d39bb"), 1039, 1040)
-                    .addLevelEvolution(70, "\uE007", TextColor.fromHexString("#8d39bb"), 1041, 1042)
+                    .addLevelEvolution(70, "\uE007", TextColor.fromHexString("#d8d039"), 1041, 1042)
                     .addLevelEvolution(80, "\uE008", TextColor.fromHexString("#dc9935"), 1043, 1044)
                     .addLevelEvolution(90, "\uE009", TextColor.fromHexString("#c94646"), 1045, 1046)
                     .addLevelEvolution(100, "\uE00A", NamedTextColor.GOLD, 1047, 1048)
